--- a/index.html
+++ b/index.html
@@ -6,4 +6,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    
+      </head>
+  <body>
+<main>
+  <header>
+    <div class="user-count">0</div>
+    <h1>doreme Chat</h1>
+    <h2>โดเรมีแชท</h2>
+  </header>
+
+  <section class="chat">
+    <p><strong>Pepito</strong>: Hey everyone!</p>
+    <p><strong>親日</strong>: こんいちは！</p>
+  </section>
+
+  <form>
+    <input type="text" placeholder="Say something nice" />
+    <button>Send</button>
+  </form>
+</main>
