--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>First website</title>
+    <title>thiland chat</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <meta name=“keywords” content=“seo,search engine,google,search engin, US concert ,  America Tickets, ticketmaster concert, Amazon, shopAmazon, prime, googleglobalp, Freemium, jobiden, cicb, bankofcanada.ca, bank, youtube, thilandchat, newchat, " >
+		
+   <link rel="stylesheet" href="style.css">
       </head>
   <body>
 <main>
