--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <link rel="stylesheet" href="style.css">
       </head>
   <body>
+	<marquee bgcolor="#A9E0B8" direction="lefe" scrollamount="5">หาแฟน หารัก รับสร้างเว็บแชทส่วนตัวด้วยจาวาสคริปต์</marquee>
+
+					  
 <main>
   <header>
     <div class="user-count">0</div>
